# openai-agents-redis

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: cd.yml
examples/ecommerce/: agent.py  api.py  context.py  llm.py  models.py
src/agents_redis/: __init__.py  context.py  integration.py  session.py
tests/: README.md  conftest.py  conftest_local.py  test_integration.py  test_redis_session.py  test_redis_session_manager.py  test_smoke.py
