[project]
name = "openai-agents-redis"
version = "0.1.0"
description = "Session management for OpenAI Agents SDK using Redis."
requires-python = ">=3.13"
authors = [{name = "Rafael Pierre"}]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "anyio>=4.9.0",
    "openai-agents>=0.2.2",
    "redis[hiredis]>=6.2.0",
]

[dependency-groups]
dev = [
    "anyio>=4.9.0",
    "pyclean>=3.1.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.4",
]

[tool.uv.workspace]
members = ["agents_redis"]

[tool.uv.sources]
agents_redis = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents_redis"]

[tool.coverage.run]
source = ["tests", "src/agents_redis"]

[project.urls]
Homepage = "https://github.com/rafaelpierre/openai-agents-redis"
Repository = "https://github.com/rafaelpierre/openai-agents-redis"
